# pandas-dqe

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-devel.txt
src/: decorators.py  logger.py  quickstart_dataclass.py  quickstart_dict.py  schemas.py
